# time-flow

./: CLAUDE.md  Lifecycle Explorer.dc.html  design.md  index.html  package-lock.json  package.json  vite.config.ts
design/: README.md
design/accessibility/: DESIGN.md
design/assets/reference/: README.md
design/components/: DESIGN.md
design/empty-states/: DESIGN.md
design/prototypes/: Popover.dc.html  README.md  Tray Time Tracker.dc.html
rebuild/: 00-charter.md  design-mock.html
src/: App.tsx  Popover.tsx  Settings.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: app.rs  commands.rs  config.rs  db.rs  error.rs  idle.rs  lib.rs  main.rs  menu.rs  models.rs  session.rs  tray.rs
src/components/: Primitives.tsx  ProjectTaskForm.tsx
src/lib/: api.ts  format.ts  platform.ts  tokens.ts
src/screens/: EditEntryScreen.tsx  HomeScreen.tsx  ManualEntryScreen.tsx  SettingsScreen.tsx  StartScreen.tsx
src/types/: app.ts
