[package]
name = "time-and-flow"
version = "0.1.0"
description = "Offline tray time tracker"
authors = ["Time & Flow"]
edition = "2021"

[lib]
name = "time_and_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
thiserror = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

